Regression: Sculpting using alpha brushes is slower in 3.2 than 3.1 #100379

Closed
opened 2022-08-12 22:34:55 +02:00 by Tomek Gubala · 11 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: bcfdb14560
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c

Short description of error
Significant slowdown in sculpting when using "alpha brushes" with images to sculpt detail on high poly mesh

Exact steps for others to reproduce the error
0. Download blend file and provided alpha image. Place both in the same folder

  1. Open provided blend file
  2. Switch to modifiers tab
  3. Add "subdivision surface" modifier
  4. Switch to simple and set "levels viewport" to 5
  5. Apply modifier
  6. Add "Multiresolution" modifier.
  7. Click subdivide until Sculpt/Render reaches 5
  8. This creates object with 6+ mln faces to sculpt
  9. Start sculpting with provided brush.

In 3.1.2 as long as brush is covering small area, it's very responsive. Once it gets bigger during dragging, there is a slowdown, but each next stroke goes back to being responsive as long as brush area is small. In 3.2 performance is very slow from the beginning.
First version I see this in is 3.2.0 and it continues to current release 3.2.2

alpha brush slow.blend

brush.png

2022-08-12 22-12-53.mkv

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: `bcfdb14560` Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` **Short description of error** Significant slowdown in sculpting when using "alpha brushes" with images to sculpt detail on high poly mesh **Exact steps for others to reproduce the error** 0. Download blend file and provided alpha image. Place both in the same folder 1. Open provided blend file 2. Switch to modifiers tab 3. Add "subdivision surface" modifier 4. Switch to simple and set "levels viewport" to 5 5. Apply modifier 6. Add "Multiresolution" modifier. 7. Click subdivide until Sculpt/Render reaches 5 8. This creates object with 6+ mln faces to sculpt 9. Start sculpting with provided brush. In 3.1.2 as long as brush is covering small area, it's very responsive. Once it gets bigger during dragging, there is a slowdown, but each next stroke goes back to being responsive as long as brush area is small. In 3.2 performance is very slow from the beginning. First version I see this in is 3.2.0 and it continues to current release 3.2.2 [alpha brush slow.blend](https://archive.blender.org/developer/F13373241/alpha_brush_slow.blend) ![brush.png](https://archive.blender.org/developer/F13373245/brush.png) [2022-08-12 22-12-53.mkv](https://archive.blender.org/developer/F13373248/2022-08-12_22-12-53.mkv)
Author

Added subscriber: @VGT

Added subscriber: @VGT
Author

Polycount to encounter this issue might be dependent on hardware capabilities, so it might be worth to tinker with numbers in step 4 and 7. Go lower or higher depending on hardware limitations.

Polycount to encounter this issue might be dependent on hardware capabilities, so it might be worth to tinker with numbers in step 4 and 7. Go lower or higher depending on hardware limitations.
Author

Image is 2k 16-bit, which might be a bit overkill, but lowering it to 8-bit and 1k or even smaller doesn't change anything, so it does not seems to be related to image quality.

Image is 2k 16-bit, which might be a bit overkill, but lowering it to 8-bit and 1k or even smaller doesn't change anything, so it does not seems to be related to image quality.
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce the slow down between 3.1 and 3.2. The flame graphs are as follows. Let me know if you need a bisect.

3.1:

20220815-133144.png

3.2:

20220815-133322.png

I can reproduce the slow down between 3.1 and 3.2. The flame graphs are as follows. Let me know if you need a bisect. 3.1: ![20220815-133144.png](https://archive.blender.org/developer/F13387160/20220815-133144.png) 3.2: ![20220815-133322.png](https://archive.blender.org/developer/F13387159/20220815-133322.png)
Omar Emara changed title from High poly mesh sculpt slow when using alpha brushes to Regression: Sculpting using alpha brushes is slower in 3.2 than 3.1 2022-08-15 13:41:49 +02:00

This issue was referenced by f80f600b8e

This issue was referenced by f80f600b8e326639ea37bda1b4b85c382f39e683
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-08-16 02:15:10 +02:00

This issue was referenced by 2d19038c6c

This issue was referenced by 2d19038c6c2817fff4d8278adfa9d14020c9eea6
Member

This was my fault, I made a mistake when getting anchored brush to work properly with color and mask brushes. Should work now.

This was my fault, I made a mistake when getting anchored brush to work properly with color and mask brushes. Should work now.
Author

Can confirm as resolved. 3.3 build from Aug 17 is working as intended. Thanks for quick fix.

Can confirm as resolved. 3.3 build from Aug 17 is working as intended. Thanks for quick fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100379
No description provided.