Sculpt: Fix T100379: Anchored brush tags all nodes for update

Node tagging needed to happen after the undo node's null check.